--- a/Model.ipynb
+++ b/Model.ipynb
@@ -13,7 +13,7 @@
    "id": "dd5d6fa7-52e0-4cd2-bbc9-e509c4cf0692",
    "metadata": {},
    "source": [
-    "#### Team: Robyn Tomson and Otto-Cristofer Vanasaun"
+    "### Team: Robyn Tomson and Otto-Cristofer Vanasaun"
    ]
   },
   {
@@ -21,14 +21,16 @@
    "id": "e66e65a2-39eb-49e7-909e-4b4f379930ed",
    "metadata": {},
    "source": [
-    "### Downloading and importing essential dependencies and Python packages."
+    "#### Downloading and importing essential dependencies and Python packages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "56ad1574-02ce-46dc-a92e-6446eafaf7cf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,9 +80,6 @@
       "Requirement already satisfied: tzdata>=2022.7 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from pandas->datasets) (2024.1)\n",
       "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from sympy->torch) (1.3.0)\n",
       "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas->datasets) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Requirement already satisfied: tf-keras in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.16.0)\n",
       "Requirement already satisfied: tensorflow<2.17,>=2.16 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tf-keras) (2.16.2)\n",
       "Requirement already satisfied: absl-py>=1.0.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tensorflow<2.17,>=2.16->tf-keras) (2.1.0)\n",
@@ -119,9 +118,6 @@
       "Requirement already satisfied: markdown-it-py>=2.2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras) (2.18.0)\n",
       "Requirement already satisfied: mdurl~=0.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow<2.17,>=2.16->tf-keras) (0.1.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Requirement already satisfied: tensorflow in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (2.16.2)\n",
       "Requirement already satisfied: absl-py>=1.0.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tensorflow) (2.1.0)\n",
       "Requirement already satisfied: astunparse>=1.6.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from tensorflow) (1.6.3)\n",
@@ -158,10 +154,17 @@
       "Requirement already satisfied: MarkupSafe>=2.1.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from werkzeug>=1.0.1->tensorboard<2.17,>=2.16->tensorflow) (2.1.5)\n",
       "Requirement already satisfied: markdown-it-py>=2.2.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from rich->keras>=3.0.0->tensorflow) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from rich->keras>=3.0.0->tensorflow) (2.18.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow) (0.1.2)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+      "Requirement already satisfied: mdurl~=0.1 in /Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.0.0->tensorflow) (0.1.2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "2024-12-02 21:39:14.605918: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -172,12 +175,21 @@
     "from sklearn.model_selection import train_test_split\n",
     "from datasets import Dataset\n",
     "from transformers import TrainingArguments, Trainer, AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c1bb582-19a3-4fda-aa5d-f2cb808b59da",
+   "metadata": {},
+   "source": [
+    "#### Disabling warnings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7b785d32-8989-49f7-8fea-900e95e908cc",
    "metadata": {},
    "outputs": [],
@@ -187,9 +199,118 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e73a1a6-5d9a-423a-bc9c-2e8db0d51703",
+   "metadata": {},
+   "source": [
+    "#### Reading data from csv files"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "419e5840-25ae-48e9-9788-32a7b9de4eaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataTrain = pd.read_csv(\"data/train.csv\")\n",
+    "dataTest = pd.read_csv(\"data/test.csv\")\n",
+    "dataSampleSubmit = pd.read_csv(\"data/sample_submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc44e182-4b4a-41ee-ba3b-4d21728a9da7",
+   "metadata": {},
+   "source": [
+    "#### Data description and understanding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7c522d6b-2f3d-44b1-aa21-e255eb774882",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7613 entries, 0 to 7612\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   id        7613 non-null   int64 \n",
+      " 1   keyword   7552 non-null   object\n",
+      " 2   location  5080 non-null   object\n",
+      " 3   text      7613 non-null   object\n",
+      " 4   target    7613 non-null   int64 \n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 297.5+ KB\n",
+      "None\n",
+      "________________________________________\n",
+      "Total words: 113461\n",
+      "Unique words: 31924\n",
+      "________________________________________\n",
+      "Number of unique disasters: 221\n",
+      "List of unique disasters: ['ablaze', 'accident', 'aftershock', 'airplane%20accident', 'ambulance', 'annihilated', 'annihilation', 'apocalypse', 'armageddon', 'army', 'arson', 'arsonist', 'attack', 'attacked', 'avalanche', 'battle', 'bioterror', 'bioterrorism', 'blaze', 'blazing', 'bleeding', 'blew%20up', 'blight', 'blizzard', 'blood', 'bloody', 'blown%20up', 'body%20bag', 'body%20bagging', 'body%20bags', 'bomb', 'bombed', 'bombing', 'bridge%20collapse', 'buildings%20burning', 'buildings%20on%20fire', 'burned', 'burning', 'burning%20buildings', 'bush%20fires', 'casualties', 'casualty', 'catastrophe', 'catastrophic', 'chemical%20emergency', 'cliff%20fall', 'collapse', 'collapsed', 'collide', 'collided', 'collision', 'crash', 'crashed', 'crush', 'crushed', 'curfew', 'cyclone', 'damage', 'danger', 'dead', 'death', 'deaths', 'debris', 'deluge', 'deluged', 'demolish', 'demolished', 'demolition', 'derail', 'derailed', 'derailment', 'desolate', 'desolation', 'destroy', 'destroyed', 'destruction', 'detonate', 'detonation', 'devastated', 'devastation', 'disaster', 'displaced', 'drought', 'drown', 'drowned', 'drowning', 'dust%20storm', 'earthquake', 'electrocute', 'electrocuted', 'emergency', 'emergency%20plan', 'emergency%20services', 'engulfed', 'epicentre', 'evacuate', 'evacuated', 'evacuation', 'explode', 'exploded', 'explosion', 'eyewitness', 'famine', 'fatal', 'fatalities', 'fatality', 'fear', 'fire', 'fire%20truck', 'first%20responders', 'flames', 'flattened', 'flood', 'flooding', 'floods', 'forest%20fire', 'forest%20fires', 'hail', 'hailstorm', 'harm', 'hazard', 'hazardous', 'heat%20wave', 'hellfire', 'hijack', 'hijacker', 'hijacking', 'hostage', 'hostages', 'hurricane', 'injured', 'injuries', 'injury', 'inundated', 'inundation', 'landslide', 'lava', 'lightning', 'loud%20bang', 'mass%20murder', 'mass%20murderer', 'massacre', 'mayhem', 'meltdown', 'military', 'mudslide', 'natural%20disaster', 'nuclear%20disaster', 'nuclear%20reactor', 'obliterate', 'obliterated', 'obliteration', 'oil%20spill', 'outbreak', 'pandemonium', 'panic', 'panicking', 'police', 'quarantine', 'quarantined', 'radiation%20emergency', 'rainstorm', 'razed', 'refugees', 'rescue', 'rescued', 'rescuers', 'riot', 'rioting', 'rubble', 'ruin', 'sandstorm', 'screamed', 'screaming', 'screams', 'seismic', 'sinkhole', 'sinking', 'siren', 'sirens', 'smoke', 'snowstorm', 'storm', 'stretcher', 'structural%20failure', 'suicide%20bomb', 'suicide%20bomber', 'suicide%20bombing', 'sunk', 'survive', 'survived', 'survivors', 'terrorism', 'terrorist', 'threat', 'thunder', 'thunderstorm', 'tornado', 'tragedy', 'trapped', 'trauma', 'traumatised', 'trouble', 'tsunami', 'twister', 'typhoon', 'upheaval', 'violent%20storm', 'volcano', 'war%20zone', 'weapon', 'weapons', 'whirlwind', 'wild%20fires', 'wildfire', 'windstorm', 'wounded', 'wounds', 'wreck', 'wreckage', 'wrecked']\n"
+     ]
+    }
+   ],
+   "source": [
+    "disasters = []\n",
+    "total_words = Counter()\n",
+    "for row in dataTrain.itertuples(index=True):\n",
+    "    if pd.notna(row.keyword): \n",
+    "        if row.keyword not in disasters:\n",
+    "            disasters.append(row.keyword)\n",
+    "            \n",
+    "    words = row.text.split() \n",
+    "    total_words.update(words)\n",
+    "    \n",
+    "unique_word_count = len(total_words)\n",
+    "\n",
+    "\n",
+    "print(dataTrain.info())\n",
+    "print(\"________________________________________\")\n",
+    "print(\"Total words:\", sum(total_words.values()))\n",
+    "print(\"Unique words:\", unique_word_count)\n",
+    "print(\"________________________________________\")\n",
+    "print(\"Number of unique disasters:\", len(disasters))\n",
+    "print(\"List of unique disasters:\", disasters)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e462ee7-83d0-4eb0-8af7-d3dd6f420717",
+   "metadata": {},
+   "source": [
+    "#### Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5b6e0300-135f-4820-b5b7-eec369d8eba0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c572e26b-80ba-4824-a591-21b49cd0ce63",
+   "metadata": {},
+   "source": [
+    "#### Model building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "989cc2a1-25e4-45ac-b722-126306869661",
    "metadata": {},
    "outputs": [
     {
@@ -199,35 +320,64 @@
       "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   id keyword location                                               text  \\\n",
-      "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
-      "1   4     NaN      NaN             Forest fire near La Ronge Sask. Canada   \n",
-      "2   5     NaN      NaN  All residents asked to 'shelter in place' are ...   \n",
-      "3   6     NaN      NaN  13,000 people receive #wildfires evacuation or...   \n",
-      "4   7     NaN      NaN  Just got sent this photo from Ruby #Alaska as ...   \n",
-      "\n",
-      "   target  \n",
-      "0       1  \n",
-      "1       1  \n",
-      "2       1  \n",
-      "3       1  \n",
-      "4       1  \n"
-     ]
     }
    ],
    "source": [
-    "dataTrain = pd.read_csv(\"data/train.csv\")\n",
-    "dataTest = pd.read_csv(\"data/test.csv\")\n",
-    "dataSampleSubmit = pd.read_csv(\"data/sample_submission.csv\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"bert-base-uncased\")\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)\n",
-    "\n",
-    "print(dataTrain.head())"
+    "model = AutoModelForSequenceClassification.from_pretrained(\"bert-base-uncased\", num_labels=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f0feec-5790-4678-943d-29be6ead8b75",
+   "metadata": {},
+   "source": [
+    "#### Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "67756e09-3130-4fda-a59a-75013212315c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fcfcbeb-2140-4a64-8d24-9c0d7a0296f5",
+   "metadata": {},
+   "source": [
+    "#### Model testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8469f654-58c2-414f-bd03-3b55640e5e19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f190882-dced-42c5-be48-3b346bb2abe1",
+   "metadata": {},
+   "source": [
+    "#### Submition, review, reporting and ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "038d83c7-bd57-4ada-9792-e6bffa998d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO"
    ]
   }
  ],
