--- a/Model.ipynb
+++ b/Model.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "id": "989cc2a1-25e4-45ac-b722-126306869661",
    "metadata": {
     "scrolled": true
@@ -513,18 +513,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 264ms/step - accuracy: 0.5129 - loss: 0.9042 - val_accuracy: 0.5739 - val_loss: 0.6852\n",
-      "Epoch 2/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 249ms/step - accuracy: 0.5488 - loss: 0.6956 - val_accuracy: 0.5739 - val_loss: 0.6843\n",
-      "Epoch 3/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m48s\u001b[0m 252ms/step - accuracy: 0.5519 - loss: 0.6926 - val_accuracy: 0.5739 - val_loss: 0.6825\n",
-      "Epoch 4/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 216ms/step - accuracy: 0.5720 - loss: 0.6870 - val_accuracy: 0.5739 - val_loss: 0.6822\n",
-      "Epoch 5/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m47s\u001b[0m 246ms/step - accuracy: 0.5680 - loss: 0.6864 - val_accuracy: 0.5739 - val_loss: 0.6837\n",
-      "Epoch 6/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m49s\u001b[0m 258ms/step - accuracy: 0.5710 - loss: 0.6864 - val_accuracy: 0.5739 - val_loss: 0.6826\n"
+      "Epoch 1/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 197ms/step - accuracy: 0.5208 - loss: 0.9017 - val_accuracy: 0.5739 - val_loss: 0.6858\n",
+      "Epoch 2/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 198ms/step - accuracy: 0.5370 - loss: 0.7025 - val_accuracy: 0.5739 - val_loss: 0.6830\n",
+      "Epoch 3/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m38s\u001b[0m 199ms/step - accuracy: 0.5398 - loss: 0.6937 - val_accuracy: 0.5739 - val_loss: 0.6827\n",
+      "Epoch 4/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 230ms/step - accuracy: 0.5727 - loss: 0.6855 - val_accuracy: 0.5739 - val_loss: 0.6878\n",
+      "Epoch 5/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m69s\u001b[0m 362ms/step - accuracy: 0.5371 - loss: 0.6913 - val_accuracy: 0.5739 - val_loss: 0.6827\n",
+      "Epoch 6/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m63s\u001b[0m 331ms/step - accuracy: 0.5724 - loss: 0.6863 - val_accuracy: 0.5739 - val_loss: 0.6832\n",
+      "Epoch 7/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m47s\u001b[0m 248ms/step - accuracy: 0.5701 - loss: 0.6850 - val_accuracy: 0.5739 - val_loss: 0.6825\n",
+      "Epoch 8/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 215ms/step - accuracy: 0.5743 - loss: 0.6840 - val_accuracy: 0.5739 - val_loss: 0.6822\n",
+      "Epoch 9/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m44s\u001b[0m 228ms/step - accuracy: 0.5723 - loss: 0.6862 - val_accuracy: 0.5739 - val_loss: 0.6853\n",
+      "Epoch 10/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m80s\u001b[0m 215ms/step - accuracy: 0.5645 - loss: 0.6864 - val_accuracy: 0.5739 - val_loss: 0.6828\n",
+      "Epoch 11/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 214ms/step - accuracy: 0.5699 - loss: 0.6842 - val_accuracy: 0.5739 - val_loss: 0.6831\n",
+      "Epoch 12/12\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m46s\u001b[0m 241ms/step - accuracy: 0.5732 - loss: 0.6843 - val_accuracy: 0.5739 - val_loss: 0.6823\n"
      ]
     }
    ],
@@ -560,7 +572,7 @@
     "\n",
     "vocab_size = 30522\n",
     "embedding_dim = 128\n",
-    "max_len = 100\n",
+    "max_len = 1000\n",
     "\n",
     "modelLSTM = Sequential([\n",
     "    Embedding(input_dim=vocab_size, output_dim=embedding_dim),\n",
@@ -584,19 +596,19 @@
     "    history = modelLSTM.fit(\n",
     "        train_sequences,\n",
     "        train_labels,\n",
-    "        epochs=6,\n",
+    "        epochs=12,\n",
     "        batch_size=32,\n",
     "        validation_data=(val_sequences, val_labels),\n",
     "        #class_weight=class_weights_dict,\n",
     "        verbose=1\n",
     "    )\n",
     "except KeyError as e:\n",
-    "    print(\"KeyError encountered:\", e)"
+    "    print(\"KeyError encountered:\", e)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "1e9b35cf-17bf-4e33-a944-d1eb53ea7e3d",
    "metadata": {},
    "outputs": [
@@ -604,19 +616,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Aega treenimiseks läks 5 minutit ja 28.91 sekundit.\n"
+      "Aega treenimiseks läks 10 minutit ja 51.17 sekundit.\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'test_sequences' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m aeg \u001b[38;5;241m=\u001b[39m time()\u001b[38;5;241m-\u001b[39malgus\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAega treenimiseks läks \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m minutit ja \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m sekundit.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;28mround\u001b[39m(aeg\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m60\u001b[39m), \u001b[38;5;28mround\u001b[39m(aeg\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m60\u001b[39m,\u001b[38;5;241m2\u001b[39m)))\n\u001b[0;32m----> 3\u001b[0m X_testLSTM \u001b[38;5;241m=\u001b[39m \u001b[43mtest_sequences\u001b[49m\n\u001b[1;32m      5\u001b[0m y_predsLSTM \u001b[38;5;241m=\u001b[39m modelLSTM\u001b[38;5;241m.\u001b[39mpredict(X_testLSTM)\n\u001b[1;32m      7\u001b[0m y_predsLSTM \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39margmax(vastus) \u001b[38;5;28;01mfor\u001b[39;00m vastus \u001b[38;5;129;01min\u001b[39;00m y_predsLSTM]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'test_sequences' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nX_testLSTM = test_sequences\\n\\ny_predsLSTM = modelLSTM.predict(X_testLSTM)\\n\\ny_predsLSTM = [np.argmax(vastus) for vastus in y_predsLSTM]\\n\\ny_test = list(testset[\\'label\\'])\\n#y_test = [labels.index(cat) for cat in y_test]\\n\\nprint(\"Täpsus:\", accuracy_score(y_test, y_predsLSTM))\\n\\n\\nprint(\"Sildid:\", labels)\\nprint(\"Segadusmaatriks:\")\\nprint(confusion_matrix(y_test, y_predsLSTM))\\n'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
