--- a/Model.ipynb
+++ b/Model.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "7c522d6b-2f3d-44b1-aa21-e255eb774882",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "5b6e0300-135f-4820-b5b7-eec369d8eba0",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "989cc2a1-25e4-45ac-b722-126306869661",
    "metadata": {
     "scrolled": true
@@ -490,18 +490,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m389s\u001b[0m 2s/step - accuracy: 0.5569 - f1_score: 0.1870 - loss: 0.8615 - val_accuracy: 0.7846 - val_f1_score: 0.1959 - val_loss: 0.4719\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m446s\u001b[0m 2s/step - accuracy: 0.6553 - loss: 0.6137 - val_accuracy: 0.7932 - val_loss: 0.4619\n",
       "Epoch 2/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m405s\u001b[0m 2s/step - accuracy: 0.8640 - f1_score: 0.2010 - loss: 0.3572 - val_accuracy: 0.7905 - val_f1_score: 0.1968 - val_loss: 0.4799\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m479s\u001b[0m 3s/step - accuracy: 0.8588 - loss: 0.3519 - val_accuracy: 0.7859 - val_loss: 0.4825\n",
       "Epoch 3/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m415s\u001b[0m 2s/step - accuracy: 0.9165 - f1_score: 0.2020 - loss: 0.2342 - val_accuracy: 0.7833 - val_f1_score: 0.1976 - val_loss: 0.5881\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m473s\u001b[0m 2s/step - accuracy: 0.9172 - loss: 0.2327 - val_accuracy: 0.7754 - val_loss: 0.5686\n",
       "Epoch 4/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m416s\u001b[0m 2s/step - accuracy: 0.9517 - f1_score: 0.2016 - loss: 0.1516 - val_accuracy: 0.7656 - val_f1_score: 0.1917 - val_loss: 0.6829\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m462s\u001b[0m 2s/step - accuracy: 0.9487 - loss: 0.1481 - val_accuracy: 0.7656 - val_loss: 0.6817\n",
       "Epoch 5/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m408s\u001b[0m 2s/step - accuracy: 0.9640 - f1_score: 0.2005 - loss: 0.1132 - val_accuracy: 0.7676 - val_f1_score: 0.1923 - val_loss: 0.8168\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m461s\u001b[0m 2s/step - accuracy: 0.9696 - loss: 0.0881 - val_accuracy: 0.7511 - val_loss: 0.7829\n",
       "Epoch 6/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m419s\u001b[0m 2s/step - accuracy: 0.9698 - f1_score: 0.2002 - loss: 0.0872 - val_accuracy: 0.7459 - val_f1_score: 0.1882 - val_loss: 0.9113\n",
-      "Aega treenimiseks läks 41 minutit ja 51.57 sekundit.\n"
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m462s\u001b[0m 2s/step - accuracy: 0.9748 - loss: 0.0746 - val_accuracy: 0.7498 - val_loss: 0.9490\n",
+      "Aega treenimiseks läks 46 minutit ja 23.01 sekundit.\n"
      ]
     }
    ],
@@ -512,14 +512,13 @@
     "modelLSTM = Sequential([\n",
     "    Embedding(input_dim=vocab_size, output_dim=embedding_dim),\n",
     "    SpatialDropout1D(0.2),\n",
-    "    Bidirectional(LSTM(64, dropout=0.2, recurrent_dropout=0.2)),\n",
-    "    Dense(32, activation='relu'),\n",
+    "    Bidirectional(LSTM(48, dropout=0.2, recurrent_dropout=0.2)),\n",
+    "    Dense(16, activation='relu'),\n",
     "    Dropout(0.2),\n",
-    "    Dense(5, activation='softmax')\n",
+    "    Dense(2, activation='softmax')\n",
     "])\n",
     "\n",
-    "f1_score = F1Score()\n",
-    "modelLSTM.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy', f1_score])\n",
+    "modelLSTM.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
     "algus = time()\n",
     "\n",
@@ -593,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8469f654-58c2-414f-bd03-3b55640e5e19",
    "metadata": {},
    "outputs": [
@@ -601,7 +600,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m102/102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 399ms/step\n"
+      "\u001b[1m 27/102\u001b[0m \u001b[32m━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━\u001b[0m \u001b[1m27s\u001b[0m 364ms/step"
      ]
     }
    ],
@@ -629,13 +628,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "038d83c7-bd57-4ada-9792-e6bffa998d3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_results = pd.DataFrame({'id':dataTest['id'], 'target':y_predsLSTM})\n",
-    "test_results.to_csv(\"submission3.csv\", index=False)\n",
+    "test_results.to_csv(\"submission4.csv\", index=False)\n",
     "\n",
     "#TODO: Saada f-measure 0.8 peale\n",
     "#TODO: Ühendada veebilehega et me saaks postrisessil demo näidata\n",
