Reduced overtraining, still needs work, produces 0.78 score on Kaggle

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "56ad1574-02ce-46dc-a92e-6446eafaf7cf",
    "metadata": {
     "scrolled": true
@@ -234,7 +234,9 @@
       "Requirement already satisfied: markdown-it-py>=2.2.0 in c:\\users\\vanasauo\\appdata\\local\\anaconda3\\envs\\ids\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow-intel==2.18.0->tensorflow) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in c:\\users\\vanasauo\\appdata\\local\\anaconda3\\envs\\ids\\lib\\site-packages (from rich->keras>=3.5.0->tensorflow-intel==2.18.0->tensorflow) (2.15.1)\n",
       "Requirement already satisfied: zipp>=0.5 in c:\\users\\vanasauo\\appdata\\local\\anaconda3\\envs\\ids\\lib\\site-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard<2.19,>=2.18->tensorflow-intel==2.18.0->tensorflow) (3.17.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\vanasauo\\appdata\\local\\anaconda3\\envs\\ids\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow-intel==2.18.0->tensorflow) (0.1.2)\n"
+      "Requirement already satisfied: mdurl~=0.1 in c:\\users\\vanasauo\\appdata\\local\\anaconda3\\envs\\ids\\lib\\site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow-intel==2.18.0->tensorflow) (0.1.2)\n",
+      "WARNING:tensorflow:From C:\\Users\\vanasauo\\AppData\\Local\\anaconda3\\envs\\IDS\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "7b785d32-8989-49f7-8fea-900e95e908cc",
    "metadata": {},
    "outputs": [],
@@ -307,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "419e5840-25ae-48e9-9788-32a7b9de4eaa",
    "metadata": {},
    "outputs": [],
@@ -327,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "7c522d6b-2f3d-44b1-aa21-e255eb774882",
    "metadata": {},
    "outputs": [
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "5b6e0300-135f-4820-b5b7-eec369d8eba0",
    "metadata": {},
    "outputs": [
@@ -479,7 +481,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "1e9b35cf-17bf-4e33-a944-d1eb53ea7e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "X_valLSTM = val_sequences\n",
+    "\n",
+    "y_valLSTM = modelLSTM.predict(X_valLSTM)\n",
+    "\n",
+    "y_valLSTM = [np.argmax(vastus) for vastus in y_valLSTM]\n",
+    "\n",
+    "y_val = list(testset['label'])\n",
+    "y_val = [labels.index(cat) for cat in y_test]\n",
+    "\n",
+    "#print(\"Täpsus:\", accuracy_score(y_test, y_valLSTM))\n",
+    "\n",
+    "\n",
+    "#print(\"Sildid:\", labels)\n",
+    "print(\"Segadusmaatriks:\")\n",
+    "print(confusion_matrix(val_sequences, y_valLSTM))\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "989cc2a1-25e4-45ac-b722-126306869661",
    "metadata": {
     "scrolled": true
@@ -489,46 +517,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m446s\u001b[0m 2s/step - accuracy: 0.6553 - loss: 0.6137 - val_accuracy: 0.7932 - val_loss: 0.4619\n",
-      "Epoch 2/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m479s\u001b[0m 3s/step - accuracy: 0.8588 - loss: 0.3519 - val_accuracy: 0.7859 - val_loss: 0.4825\n",
-      "Epoch 3/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m473s\u001b[0m 2s/step - accuracy: 0.9172 - loss: 0.2327 - val_accuracy: 0.7754 - val_loss: 0.5686\n",
-      "Epoch 4/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m462s\u001b[0m 2s/step - accuracy: 0.9487 - loss: 0.1481 - val_accuracy: 0.7656 - val_loss: 0.6817\n",
-      "Epoch 5/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m461s\u001b[0m 2s/step - accuracy: 0.9696 - loss: 0.0881 - val_accuracy: 0.7511 - val_loss: 0.7829\n",
-      "Epoch 6/6\n",
-      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m462s\u001b[0m 2s/step - accuracy: 0.9748 - loss: 0.0746 - val_accuracy: 0.7498 - val_loss: 0.9490\n",
-      "Aega treenimiseks läks 46 minutit ja 23.01 sekundit.\n"
+      "Epoch 1/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m443s\u001b[0m 2s/step - accuracy: 0.5139 - loss: 0.9763 - val_accuracy: 0.5739 - val_loss: 0.7981\n",
+      "Epoch 2/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m443s\u001b[0m 2s/step - accuracy: 0.6270 - loss: 0.7505 - val_accuracy: 0.7426 - val_loss: 0.6354\n",
+      "Epoch 3/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m450s\u001b[0m 2s/step - accuracy: 0.7171 - loss: 0.6296 - val_accuracy: 0.7722 - val_loss: 0.5650\n",
+      "Epoch 4/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m457s\u001b[0m 2s/step - accuracy: 0.7619 - loss: 0.5673 - val_accuracy: 0.7853 - val_loss: 0.5440\n",
+      "Epoch 5/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m454s\u001b[0m 2s/step - accuracy: 0.8001 - loss: 0.5207 - val_accuracy: 0.7807 - val_loss: 0.5295\n",
+      "Epoch 6/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m456s\u001b[0m 2s/step - accuracy: 0.8257 - loss: 0.4715 - val_accuracy: 0.7800 - val_loss: 0.5442\n",
+      "Epoch 7/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m458s\u001b[0m 2s/step - accuracy: 0.8590 - loss: 0.4340 - val_accuracy: 0.7794 - val_loss: 0.5439\n",
+      "Epoch 8/10\n",
+      "\u001b[1m191/191\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m479s\u001b[0m 3s/step - accuracy: 0.8729 - loss: 0.4081 - val_accuracy: 0.7794 - val_loss: 0.5525\n",
+      "Aega treenimiseks läks 61 minutit ja 41.23 sekundit.\n"
      ]
     }
    ],
    "source": [
+    "from tensorflow.keras.layers import BatchNormalization\n",
+    "\n",
     "vocab_size = 30522\n",
     "embedding_dim = 256\n",
     "\n",
     "modelLSTM = Sequential([\n",
     "    Embedding(input_dim=vocab_size, output_dim=embedding_dim),\n",
-    "    SpatialDropout1D(0.2),\n",
-    "    Bidirectional(LSTM(48, dropout=0.2, recurrent_dropout=0.2)),\n",
-    "    Dense(16, activation='relu'),\n",
-    "    Dropout(0.2),\n",
-    "    Dense(2, activation='softmax')\n",
+    "    SpatialDropout1D(0.4),\n",
+    "    BatchNormalization(),\n",
+    "    Dropout(0.4),\n",
+    "    Bidirectional(LSTM(8, dropout=0.4, recurrent_dropout=0.3)),\n",
+    "    Dropout(0.4),\n",
+    "    Dense(2, activation='softmax', kernel_regularizer=tf.keras.regularizers.l2(0.1))\n",
     "])\n",
     "\n",
     "modelLSTM.compile(loss='sparse_categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
     "\n",
     "algus = time()\n",
     "\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "try:\n",
     "    history = modelLSTM.fit(\n",
     "        train_sequences,\n",
     "        train_labels,\n",
-    "        epochs=6,\n",
+    "        epochs=10,\n",
     "        batch_size=32,\n",
     "        validation_data=(val_sequences, val_labels),\n",
+    "        callbacks=[early_stopping],\n",
     "        verbose=1\n",
     "    )\n",
     "except KeyError as e:\n",
@@ -539,47 +576,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e9b35cf-17bf-4e33-a944-d1eb53ea7e3d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "X_testLSTM = test_sequences\n",
-    "\n",
-    "y_predsLSTM = modelLSTM.predict(X_testLSTM)\n",
-    "\n",
-    "y_predsLSTM = [np.argmax(vastus) for vastus in y_predsLSTM]\n",
-    "\n",
-    "y_test = list(testset['label'])\n",
-    "#y_test = [labels.index(cat) for cat in y_test]\n",
-    "\n",
-    "print(\"Täpsus:\", accuracy_score(y_test, y_predsLSTM))\n",
-    "\n",
-    "\n",
-    "print(\"Sildid:\", labels)\n",
-    "print(\"Segadusmaatriks:\")\n",
-    "print(confusion_matrix(y_test, y_predsLSTM))\n",
-    "\"\"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "95349017-c454-4484-9e8d-edbd8830cf94",
    "metadata": {},
    "source": [
     "#### Model training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67756e09-3130-4fda-a59a-75013212315c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TODO"
    ]
   },
   {
@@ -592,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "8469f654-58c2-414f-bd03-3b55640e5e19",
    "metadata": {},
    "outputs": [
@@ -600,7 +601,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m 27/102\u001b[0m \u001b[32m━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━\u001b[0m \u001b[1m27s\u001b[0m 364ms/step"
+      "\u001b[1m102/102\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m39s\u001b[0m 378ms/step\n"
      ]
     }
    ],
@@ -628,13 +629,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "038d83c7-bd57-4ada-9792-e6bffa998d3b",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_results = pd.DataFrame({'id':dataTest['id'], 'target':y_predsLSTM})\n",
-    "test_results.to_csv(\"submission4.csv\", index=False)\n",
+    "test_results.to_csv(\"submission7.csv\", index=False)\n",
     "\n",
     "#TODO: Saada f-measure 0.8 peale\n",
     "#TODO: Ühendada veebilehega et me saaks postrisessil demo näidata\n",
