Final score: 0.784, also included the notebook for plots in the poster

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -258,6 +258,12 @@
     }
    ],
    "source": [
+    "!pip install imblearn\n",
+    "!pip install transformers datasets torch scikit-learn\n",
+    "!pip install tf-keras\n",
+    "!pip install tensorflow\n",
+    "!pip install transformers\n",
+    "!pip install --upgrade tensorflow transformers\n",
     "import os\n",
     "import re\n",
     "import string\n",
@@ -427,48 +433,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb34c4b9-ba5e-4040-b469-25da0229ac40",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dataTrain' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mdataTrain\u001b[49m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'dataTrain' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import matplotlib as plt\n",
-    "dataTrain\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "8bf00466-3f5a-4945-9095-321f3017f338",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.24.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "print(np.__version__)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5e462ee7-83d0-4eb0-8af7-d3dd6f420717",
    "metadata": {},
@@ -547,6 +511,8 @@
     "    text = \" \".join([word for word in text.split() if word not in stopword])\n",
     "    text = \" \".join([word for word in text.split() if word not in extrastopwords])\n",
     "\n",
+    "\n",
+    "    # Create the lemmatizer and apply the tags\n",
     "    lemmatizer = WordNetLemmatizer()\n",
     "    tokens = nltk.word_tokenize(text)\n",
     "    pos_tags = nltk.pos_tag(tokens)\n",
@@ -555,18 +521,20 @@
     "    text_lemmas = \" \".join([word for word in text_lemmas])\n",
     "    return text_lemmas\n",
     "\n",
+    "    # Perform oversampling with SMOTE\n",
     "def oversampling(data, labels):\n",
     "    X_SMOTE, y_SMOTE = SMOTE(k_neighbors=5).fit_resample(data, labels)\n",
     "    return X_SMOTE, y_SMOTE\n",
     "    \n",
+    "    # Call the text preprocess function and encode the labels\n",
     "def preprocess_data(data):\n",
     "    data['text'] = data['text'].apply(preprocess_text)\n",
     "    label_encoder = LabelEncoder()\n",
     "    data['label'] = label_encoder.fit_transform(data['target'])\n",
     "\n",
-    "    \n",
     "    return data, label_encoder\n",
     "\n",
+    "    # Tokenize the data with BertTokenizer\n",
     "def tokenize_and_prepare(data, max_length=512):\n",
     "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
     "    data['tokens'] = data['text'].apply(lambda x: tokenizer.encode(x, add_special_tokens=True, max_length=max_length, truncation=True))\n",
@@ -574,13 +542,19 @@
     "    return token_sequences\n",
     "\n",
     "\n",
+    "    # Call the preprocess_data function and split the training and validation data\n",
     "def eeltöötlus(trainset):\n",
     "    trainset, label_encoder = preprocess_data(trainset)\n",
     "    train_data, val_data = train_test_split(trainset, test_size=0.2, random_state=42)\n",
     "    train_labels = train_data['label']\n",
     "    val_labels = val_data['label']\n",
-    "   # print(train_data['text'])\n",
     "    \n",
+    "    # We will not be using these columns\n",
+    "    train_data = train_data.drop(columns=\"location\")\n",
+    "    train_data = train_data.drop(columns=\"keyword\")\n",
+    "    val_data = val_data.drop(columns=\"location\")\n",
+    "    val_data = val_data.drop(columns=\"keyword\")\n",
+    "\n",
     "    train_sequences = tokenize_and_prepare(train_data)\n",
     "    val_sequences = tokenize_and_prepare(val_data)\n",
     "    train_sequences = pad_sequences(\n",
@@ -590,45 +564,12 @@
     "    train_sequences, train_labels = oversampling(train_sequences, train_labels)\n",
     "    return train_sequences, val_sequences, train_labels, val_labels, label_encoder\n",
     "\n",
-    "train_sequences, val_sequences, train_labels, val_labels, label_encoder = eeltöötlus(dataTrain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "id": "4f89a957-53bd-4e60-9dea-6486ef349704",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(6936, 1400)\n",
-      "(6936,)\n",
-      "(1523, 512)\n",
-      "(1523,)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "label\n",
-       "1    3468\n",
-       "0    3468\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 265,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(train_sequences.shape)\n",
-    "print(train_labels.shape)\n",
-    "print(val_sequences.shape)\n",
-    "print(val_labels.shape)\n",
-    "train_labels.value_counts()"
+    "# Driver to start data preparation\n",
+    "train_sequences, val_sequences, train_labels, val_labels, label_encoder = eeltöötlus(dataTrain)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -651,22 +592,23 @@
     "vocab_size = 30522\n",
     "embedding_dim = 256\n",
     "\n",
-    "\n",
-    "initial_learning_rate = 0.00001\n",
+    "# Dynamic learning rate to prevent overfitting\n",
+    "initial_learning_rate = 0.0001\n",
     "lr_schedule = ExponentialDecay(\n",
     "    initial_learning_rate,\n",
     "    decay_steps=100000,\n",
     "    decay_rate=0.96,\n",
     "    staircase=True)\n",
     "\n",
+    "# Structure of the nlp model\n",
     "modelLSTM = Sequential([\n",
     "    Embedding(input_dim=vocab_size, output_dim=embedding_dim),\n",
     "    SpatialDropout1D(0.2),\n",
-    "    Bidirectional(LSTM(32, dropout=0.1)),\n",
-    "    #BatchNormalization(),\n",
-    "    Dense(24, activation='relu', kernel_regularizer=tf.keras.regularizers.l2(0.01)),\n",
-    "    #Dropout(0.1),\n",
-    "    Dense(12, activation='relu'),\n",
+    "    Bidirectional(LSTM(24, dropout=0.2)),\n",
+    "    BatchNormalization(),\n",
+    "    Dense(16, activation='relu', kernel_regularizer=tf.keras.regularizers.l2(0.001)),\n",
+    "    Dropout(0.1),\n",
+    "    Dense(16, activation='relu'),\n",
     "    Dense(2, activation='softmax')\n",
     "])\n",
     "\n",
@@ -725,9 +667,13 @@
     }
    ],
    "source": [
+    "# Measure time spent on training\n",
     "algus = time()\n",
     "\n",
+    "# If the performance stagnates, stop the training early\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+    "\n",
+    "# Train the model\n",
     "try:\n",
     "    history = modelLSTM.fit(\n",
     "        train_sequences,\n",
@@ -752,10 +698,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We also predict on training data to get an estimate of how well-fitted the model got to data it already knew\n",
     "X_trainLSTM = train_sequences\n",
     "y_trainLSTM = modelLSTM.predict(X_trainLSTM)\n",
+    "\n",
+    "# Transform the predictions into 1s and 0s\n",
     "y_trainLSTM = [np.argmax(vastus) for vastus in y_trainLSTM]\n",
     "        \n",
+    "# Create confusion matrix for training data\n",
     "conf_mat = confusion_matrix(train_labels, y_trainLSTM)\n",
     "print(\"Training data confusion matrix:\")\n",
     "print(conf_mat)\n",
@@ -764,13 +714,13 @@
     "TN FP\n",
     "FN TP\n",
     "\"\"\"\n",
-    "accuracy = (conf_mat[0][0] + conf_mat[1][1])/(conf_mat[0][0] + conf_mat[0][1] + conf_mat[1][0] + conf_mat[1][1])\n",
-    "precision = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[0][1])\n",
-    "recall = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[1][0])\n",
+    "accuracy = (conf_mat[0][0] + conf_mat[1][1])/(conf_mat[0][0] + conf_mat[0][1] + conf_mat[1][0] + conf_mat[1][1]) #TP + TN / TP + FN + FP + TN\n",
+    "precision = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[0][1]) # TP / TP + FP\n",
+    "recall = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[1][0]) # TP / TP + FN\n",
     "f1_measure = 2 / ((1/precision) + (1/recall))\n",
-    "print(\"Accuracy:\", accuracy) #TP + TN / TP + FN + FP + TN\n",
-    "print(\"Precision: \", precision) # TP / TP + FP\n",
-    "print(\"Recall: \", recall) # TP / TP + FN\n",
+    "print(\"Accuracy:\", accuracy) \n",
+    "print(\"Precision: \", precision)\n",
+    "print(\"Recall: \", recall)\n",
     "print(\"F1-measure:\", f1_measure)"
    ]
   },
@@ -782,34 +732,55 @@
    "outputs": [],
    "source": [
     "X_valLSTM = val_sequences\n",
-    "\n",
+    "# Predict the validation data\n",
     "y_valLSTM = modelLSTM.predict(X_valLSTM)\n",
     "y_val_lower = []\n",
     "y_1s = []\n",
-    "threshold = 0.5\n",
+    "y_0s = []\n",
+    "# Transform the predictions into 0s and 1s with modifiable threshold\n",
+    "threshold = 0.45\n",
     "for i in range(len(y_valLSTM)):\n",
     "    if y_valLSTM[i][1] > threshold:\n",
     "        y_1s.append(y_valLSTM[i][1])\n",
     "        y_val_lower.append(1)\n",
     "    else:\n",
     "         y_val_lower.append(0)\n",
+    "         y_0s.append(y_valLSTM[i][1])\n",
     "\n",
     "conf_mat = confusion_matrix(val_labels, y_val_lower)\n",
     "print(\"Validation data confusion matrix:\")\n",
     "print(conf_mat)\n",
-    "accuracy = (conf_mat[0][0] + conf_mat[1][1])/(conf_mat[0][0] + conf_mat[0][1] + conf_mat[1][0] + conf_mat[1][1])\n",
-    "precision = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[0][1])\n",
-    "recall = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[1][0])\n",
+    "accuracy = (conf_mat[0][0] + conf_mat[1][1])/(conf_mat[0][0] + conf_mat[0][1] + conf_mat[1][0] + conf_mat[1][1]) #TP + TN / TP + FN + FP + TN\n",
+    "precision = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[0][1]) # TP / TP + FP\n",
+    "recall = conf_mat[1][1] / (conf_mat[1][1] + conf_mat[1][0]) # TP / TP + FN\n",
     "f1_measure = 2 / ((1/precision) + (1/recall))\n",
-    "print(\"Accuracy:\", accuracy) #TP + TN / TP + FN + FP + TN\n",
-    "print(\"Precision: \", precision) # TP / TP + FP\n",
-    "print(\"Recall: \", recall) # TP / TP + FN\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "print(\"Precision: \", precision)\n",
+    "print(\"Recall: \", recall)\n",
     "print(\"F1-measure:\", f1_measure)\n",
+    "\n",
+    "# Here we can see the split of the predctions for different ranges (to see if the model is close to converging or not)\n",
+    "g00 = 0\n",
+    "g01 = 0\n",
+    "g02 = 0\n",
+    "g03 = 0\n",
+    "g04 = 0\n",
     "g05 = 0\n",
     "g06 = 0\n",
     "g07 = 0\n",
     "g08 = 0\n",
     "g09 = 0\n",
+    "for i in y_0s:\n",
+    "    if i > threshold - 0.1:\n",
+    "        g04+=1\n",
+    "    elif i > threshold - 0.2:\n",
+    "        g03+=1\n",
+    "    elif i > threshold - 0.3:\n",
+    "        g02+=1\n",
+    "    elif i > threshold - 0.4:\n",
+    "        g01+=1\n",
+    "    else:\n",
+    "        g00+=1\n",
     "for i in y_1s:\n",
     "    if i < threshold + 0.1:\n",
     "        g05+=1\n",
@@ -822,11 +793,21 @@
     "    else:\n",
     "        g09+=1\n",
     "\n",
-    "print(g05, threshold + 0.1)\n",
-    "print(g06, threshold + 0.2)\n",
-    "print(g07, threshold + 0.3)\n",
-    "print(g08, threshold + 0.4)\n",
-    "print(\"More than\", threshold + 0.4)\n",
+    "print()\n",
+    "print(\"Negatives: \")\n",
+    "print(\"Less than\", round(threshold - 0.4, 2))\n",
+    "print(g00)\n",
+    "print(g01, round(threshold - 0.4, 2))\n",
+    "print(g02, round(threshold - 0.3, 2))\n",
+    "print(g03, round(threshold - 0.2, 2))\n",
+    "print(g04, round(threshold - 0.1, 2))\n",
+    "print(\"Positives: \")\n",
+    "print(g05, round(threshold + 0.1, 2))\n",
+    "print(g06, round(threshold + 0.2, 2))\n",
+    "print(g07, round(threshold + 0.3, 2))\n",
+    "print(g08, round(threshold + 0.4, 2))\n",
+    "\n",
+    "print(\"More than\", round(threshold + 0.4, 2))\n",
     "print(g09)"
    ]
   },
@@ -845,7 +826,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Process the test data\n",
     "dataTest['text'] = dataTest['text'].apply(preprocess_text)\n",
+    "dataTest = dataTest.drop(columns=\"location\")\n",
+    "dataTest = dataTest.drop(columns=\"keyword\")\n",
     "test_sequences = dataTest\n",
     "test_sequences = tokenize_and_prepare(test_sequences)\n",
     "test_sequences = pad_sequences(\n",
@@ -854,18 +838,16 @@
     ")\n",
     "\n",
     "X_testLSTM = test_sequences\n",
-    "\n",
+    "# Predict the labels of test data\n",
     "y_predsLSTM = modelLSTM.predict(X_testLSTM)\n",
     "\n",
-    "\n",
+    "# Transform the predictions into 0s and 1s with modifiable threshold\n",
     "y_test_higher = []\n",
     "for i in range(len(y_predsLSTM)):\n",
-    "    if y_predsLSTM[i][1] > 0.5:\n",
+    "    if y_predsLSTM[i][1] > 0.45:\n",
     "         y_test_higher.append(1)\n",
     "    else:\n",
-    "         y_test_higher.append(0)\n",
-    "\n",
-    "#y_predsLSTM = [np.argmax(vastus) for vastus in y_predsLSTM]"
+    "         y_test_higher.append(0)"
    ]
   },
   {
@@ -875,9 +857,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Display the 0-1 split on training and validation data\n",
+    "\n",
     "print(train_labels.value_counts())\n",
     "print(val_labels.value_counts())\n",
     "\n",
+    "# See ho many negatives and positives were predicted on training, validation and test data\n",
     "print(\"train\")\n",
     "print(y_trainLSTM.count(0))\n",
     "print(y_trainLSTM.count(1))\n",
@@ -906,22 +891,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convert results to a csv file to submit to Kaggle\n",
     "test_results = pd.DataFrame({'id':dataTest['id'], 'target':y_test_higher})\n",
-    "test_results.to_csv(\"submission18.csv\", index=False)\n",
+    "test_results.to_csv(\"submissions/submission23.csv\", index=False)\n",
     "\n",
-    "#TODO: recall kõrgemaks. Ta ei converge ära(?)\n",
-    "#TODO: Saada f-measure 0.8 peale\n",
-    "#TODO: Ühendada veebilehega et me saaks postrisessil demo näidata\n",
-    "#TODO: See for-loop siia et ta pakuks mis tüüpi disaster on"
+    "#TODO: Ühendada veebilehega et me saaks postrisessil demo näidata"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e5cbaf6-8a8a-4fa5-b3a7-3c13529e0f58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
