Small changes to the model

--- a/plots.ipynb
+++ b/plots.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 242,
    "id": "ed5e1491-a46d-4e3a-a1f6-0cd3ef8c255c",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
